# devtools-frontend

./: .gitignore  .gn  AUTHORS  BUILD.gn  DEPS  PRESUBMIT.py  SECURITY.md  eslint.config.mjs  expected_grd_files.json  input_grd_files.json  package-lock.json  package.json
build_overrides/: build.gni
config/gni/: devtools_grd_files.gni  devtools_image_files.gni
config/owner/: COMMON_OWNERS
docs/: get_the_code.md  playbook.md  ui_engineering.md
docs/checklist/: README.md
extension-api/: ExtensionAPI.d.ts
front_end/: BUILD.gn  Tests.js  api_tests.txt  design_system_tokens.css  devtools_compatibility.js  foundation_tests.txt  tests.txt  tsconfig.json
front_end/Images/: Images.js  Images.prebundle.js  rollup.config.mjs
front_end/entrypoints/greendev_floaty/: BUILD.gn  FloatyEntrypoint.ts
front_end/foundation/: BUILD.gn  README.md  Universe.d.ts  Universe.js  Universe.js.map  Universe.test.api.ts  Universe.test.ts  Universe.ts  foundation-tsconfig.json  foundation.js  foundation.js.map  foundation_node_typecheck-tsconfig.json
front_end/models/text_utils/: BUILD.gn  ContentData.js.map  ContentData.ts  TextRange.js.map  TextRange.ts  text_utils.js  text_utils.js.map  text_utils.ts  text_utils_node_typecheck-tsconfig.json
front_end/testing/: AiAssistanceHelpers.d.ts  AiAssistanceHelpers.js  AiAssistanceHelpers.js.map  AiAssistanceHelpers.ts  BUILD.gn  DOMHelpers.d.ts  DOMHelpers.js  DOMHelpers.js.map  DOMHelpers.ts  DOMHooks.ts  DataGridHelpers.js  DataGridHelpers.js.map  DataGridHelpers.ts  EnvironmentHelpers.d.ts  EnvironmentHelpers.js  EnvironmentHelpers.js.map  EnvironmentHelpers.ts  ExtensionHelpers.js  ExtensionHelpers.js.map  ExtensionHelpers.ts  MochaHelpers.d.ts  MochaHelpers.js  MochaHelpers.js.map  MochaHelpers.ts  MockCDPConnection.js  MockCDPConnection.js.map  MockCDPConnection.ts  MockConnection.d.ts  MockConnection.js  MockConnection.js.map  MockScopeChain.js  MockScopeChain.js.map  MockScopeChain.ts  NetworkHelpers.js  NetworkHelpers.js.map  NetworkHelpers.ts  OverridesHelpers.js  OverridesHelpers.js.map  OverridesHelpers.ts  PersistenceHelpers.d.ts  (+59 more)
inspector_overlay/: main.ts
mcp/: BUILD.gn  mcp.ts
scripts/: bisect.mjs  devtools_build.mjs  env-utils.mjs  extract_bugs.ts  fetch_luci_test_clusters.py  image_diff.py  run_start.mjs  test_harness.py  test_health.ts
test/: BUILD.gn  README.md  TestExpectations  exonerate.ts  run.ts
test/api/: BUILD.gn  README.md  TargetUniverse.ts  api-state-provider.ts  mocha-interface.ts  mocha_hooks.ts  run-mocha.ts  types.d.ts
test/conductor/: .gitignore  BUILD.gn  async-scope.ts  commandline.ts  diff-utils.ts  events.ts  hooks.ts  inspected_page.ts  karma-resultsdb-reporter.ts  mocha-interface-helpers.ts  mocha-interface.ts  paths.ts  puppeteer-state.ts  resultsdb.ts  screenshot-error.ts  test_config.ts  test_expectations.ts  test_expectations_parser.js
test/e2e/: BUILD.gn  README.md  run-mocha.ts  tests.txt  types.d.ts
test/e2e/ai_assistance/: ai_assistance.test.ts
test/e2e/animations/: animations.test.ts
test/e2e/application/: cookies.test.ts  crash-report-context.test.ts  reporting-api.test.ts  shared-storage.test.ts
test/e2e/conductor/: mocha-interface-helpers.ts  mocha-interface.ts  state-provider.ts
test/e2e/console/: BUILD.gn  console-bind-fake.test.ts  console-clear.test.ts  console-errors.test.ts  console-filter.test.ts  console-stack-trace.test.ts  filter.test.ts  issues-toolbar.test.ts
test/e2e/elements/: BUILD.gn  accessibility-tree.test.ts  adopted-stylesheets.test.ts  adornment.test.ts  classes-pane.test.ts  edit-as-html-select-all.test.ts  prerender.test.ts  pseudo-states.test.ts  style-pane-properties.test.ts
test/e2e/emulation/: custom-devices.test.ts  responsive.test.ts
test/e2e/extensions/: can-open-resources-with-columns.test.ts  debugger-language-plugins.test.ts
test/e2e/helpers/: application-helpers.ts  console-helpers.ts  elements-helpers.ts  emulation-helpers.ts  memory-helpers.ts  network-helpers.ts  performance-helpers.ts  recorder-helpers.ts  settings-helpers.ts  sources-helpers.ts
test/e2e/host/: user-metrics.test.ts
test/e2e/issues/: cors-issues.test.ts  hide-issues-menu.test.ts  issue-links.test.ts  partitioning-blob-url-issues.test.ts
test/e2e/lighthouse/: devtools-settings.test.ts  navigation.test.ts  start-view.test.ts
test/e2e/memory/: memory.test.ts
test/e2e/network/: network-datagrid.test.ts  network-filter.test.ts  network-request-view.test.ts  network.test.ts  user-agent-override.test.ts
test/e2e/performance/: selector-stats-tracing.test.ts  settings-throttle-change.test.ts  timeline-js-line-level-profile.test.ts  trace-app.test.ts
test/e2e/performance/timeline/: treeview.test.ts
test/e2e/performance/wasm/: performance_profiling.test.ts
test/e2e/recorder/: recorder.test.ts  replay.test.ts  ui.test.ts
test/e2e/resources/elements/: BUILD.gn  adornment-custom-element.html
test/e2e/resources/network/: BUILD.gn  preload.html
test/e2e/resources/sources/: BUILD.gn
test/e2e/shared/: browser-helper.ts  frontend-helper.ts  page-wrapper.ts  target-helper.ts
test/e2e/sources/: BUILD.gn  breakpoint-csp-violations.test.ts  breakpoint-javascript.test.ts  continue-to-location-markers.test.ts  icon-row-bucket.test.ts  inline-variable.test.ts  sourcemap.test.ts
test/harness/: BUILD.gn  run-mocha.ts
test/harness/e2e/: duplicate.test.ts  e2e.test.ts  errors.test.ts  multiple.test.ts  tests.txt
test/harness/unit/: after_each_hook_fail.test.ts  before_each_hook_fail.test.ts  duplicate.test.ts  foundation_tests.txt  global_after_hook_fail.test.ts  global_before_hook_fail.test.ts  hooks.test.ts  screenshot_retry.test.ts  snapshot.snapshot.txt  snapshot.test.ts  tests.txt  unit.test.ts  unit_2.test.ts
test/perf/: BUILD.gn  run-mocha.ts
test/perf/panels/performance/: trace-load.test.ts
test/shared/: BUILD.gn  mocha-resultsdb-reporter.ts  run-mocha.ts
test/unit/: BUILD.gn  README.md  browser-globals.ts  context.html  debug.html  karma.conf.ts  mocha-adapter-browser.ts  mocha-interface.ts  mocharc.ts  run-mocha.ts
(+3109 files in other folders)
