# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../scripts/build/ninja/devtools_module.gni")

devtools_foundation_module("foundation") {
  sources = [ "Universe.ts" ]

  deps = [
    "../core/common:bundle",
    "../core/host:bundle",
    "../core/root:bundle",
    "../core/sdk:bundle",
    "../models/ai_assistance:bundle",
    "../models/autofill_manager:bundle",
    "../models/badges:bundle",
    "../models/bindings:bundle",
    "../models/breakpoints:bundle",
    "../models/crux-manager:bundle",
    "../models/emulation:bundle",
    "../models/javascript_metadata:bundle",
    "../models/live-metrics:bundle",
    "../models/logs:bundle",
    "../models/persistence:bundle",
    "../models/project_settings:bundle",
    "../models/workspace:bundle",
    "../models/workspace_diff:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "foundation.ts"

  deps = [ ":foundation" ]

  # IMPORTANT: core/ or models/ must not be added here.
  visibility = [
    "../../mcp/*",
    "../../test/api/*",
    "../entrypoints/*",
    "../panels/*",
    "../testing/*",
    "../ui/*",
    "./*",
  ]
}

devtools_api_test_module("api_tests") {
  sources = [ "Universe.test.api.ts" ]

  deps = [
    ":bundle",
    "../core/common:bundle",
    "../core/root:bundle",
    "../generated:protocol",
    "../testing",
  ]
}

devtools_foundation_module("unittests") {
  testonly = true

  sources = [ "Universe.test.ts" ]

  deps = [
    ":bundle",
    "../core/common:bundle",
    "../core/root:bundle",
    "../generated:protocol",
    "../testing",
  ]
}
