# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/typescript/typescript.gni")

node_ts_library("api") {
  additional_type_definitions = [ "types.d.ts" ]

  sources = [
    "TargetUniverse.ts",
    "api-state-provider.ts",
    "mocha-interface.ts",
    "mocha_hooks.ts",
    "run-mocha.ts",
  ]

  deps = [
    "../../front_end/core/common:bundle",
    "../../front_end/core/host:bundle",
    "../../front_end/core/protocol_client:bundle",
    "../../front_end/core/protocol_client:puppeteer_devtools_connection",
    "../../front_end/core/root:bundle",
    "../../front_end/core/sdk:bundle",
    "../../front_end/core/sdk:meta",
    "../../front_end/foundation:bundle",
    "../../front_end/models/badges:meta",
    "../../front_end/models/logs:meta",
    "../../front_end/models/persistence:meta",
    "../../front_end/models/workspace:meta",
    "../conductor:implementation",
    "../e2e/conductor:implementation",
    "../shared",
  ]
}
