# Copyright 2020 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../scripts/build/typescript/typescript.gni")

group("conductor") {
  deps = [
    ":implementation",
    "../../scripts/hosted_mode",
  ]
}

node_ts_library("implementation") {
  deps = [ "../../front_end/testing" ]

  sources = [
    "async-scope.ts",
    "commandline.ts",
    "custom-query-handlers.ts",
    "diff-utils.ts",
    "events.ts",
    "karma-resultsdb-reporter.ts",
    "mocha-interface-helpers.ts",
    "mocha-interface.ts",
    "paths.ts",
    "platform.ts",
    "puppeteer-state.ts",
    "resultsdb.ts",
    "screenshot-error.ts",
    "sharding.ts",
    "test_config.ts",
    "test_expectations.ts",
    "test_server.ts",
  ]
}
