# Copyright 2026 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/copy.gni")
import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/generate_css.gni")
import("../visibility.gni")

generate_css("css_files") {
  sources = [ "floaty.css" ]
}

copy_to_gen_with_grd("copy_floaty_resources") {
  sources = [
    "floaty.css",
    "floaty.html",
  ]
  visibility = [ "*" ]
}

devtools_entrypoint("floaty_entrypoint") {
  entrypoint = "FloatyEntrypoint.ts"

  deps = [
    "../../core/common:bundle",
    "../../core/host:bundle",
    "../../core/i18n:bundle",
    "../../core/root:bundle",
    "../../core/sdk:bundle",
    "../../core/sdk:meta",
    "../../entrypoints/inspector_main:meta",
    "../../entrypoints/main:meta",
    "../../foundation:bundle",
    "../../generated",
    "../../models/ai_assistance:bundle",
    "../../models/logs:meta",
    "../../models/workspace:meta",
    "../../panels/greendev:greendev_shared",
    "../../panels/sensors:meta",
    "../../panels/sources:meta",
    "../../ui/components/markdown_view:bundle",
    "../../ui/legacy/components/source_frame:meta",
  ]

  visibility = [
    ":*",
    "../../:*",
  ]
}
