# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/typescript/typescript.gni")
import("../visibility.gni")

devtools_entrypoint("bundle") {
  entrypoint = "text_utils.ts"

  deps = [ "../../core/text_utils:bundle" ]

  visibility = [
    ":*",
    "../*",
    "../../:*",
    "../../core/sdk/*",
    "../../entrypoints/*",
    "../../legacy_test_runner/test_runner/*",
    "../../panels/*",
    "../../testing/*",
    "../../ui/components/data_grid/*",
    "../../ui/components/docs/data_grid_controller/*",
    "../../ui/components/highlighting/*",
    "../../ui/components/markdown_view/*",
    "../../ui/components/text_editor/*",
    "../../ui/legacy/*",
  ]

  visibility += devtools_models_visibility
}
